--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.8.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-system-navigation-bar": "^2.6.4",
-    "styled-components": "^6.1.13"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,8 +32,6 @@
     "@react-native/typescript-config": "0.75.4",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "@types/styled-components": "^5.1.34",
-    "@types/styled-components-react-native": "^5.2.5",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
