--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -77,9 +77,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.lessonus"
+    namespace "com.link"
     defaultConfig {
-        applicationId "com.lessonus"
+        applicationId "com.link"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
