--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-keychain": "^9.0.0",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.8.0",
