--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.75.4",
     "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-gifted-charts": "^1.4.47",
     "react-native-keychain": "^9.0.0",
     "react-native-latex": "^0.5.0",
     "react-native-mathjax": "^2.1.2",
