--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/slider": "^4.5.5",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/react-native-skia": "^1.5.0",
+    "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "react": "18.3.1",
     "react-native": "0.75.4",
