--- a/backend/config-service/Dockerfile
+++ b/backend/config-service/Dockerfile
@@ -12,10 +12,10 @@ RUN apk add --no-cache tzdata && \
     echo "Asia/Seoul" > /etc/timezone
 
 # 빌드된 JAR 파일 복사
-COPY --from=builder /app/build/libs/*.jar /app/gateway-service.jar
+COPY --from=builder /app/build/libs/*.jar /app/config-service.jar
 
 # 컨테이너에서 사용하는 포트 명시
-EXPOSE 8080
+EXPOSE 8888
 
 # 애플리케이션 실행
-ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "-Duser.timezone=Asia/Seoul", "/app/gateway-service.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "-Duser.timezone=Asia/Seoul", "/app/config-service.jar"]
