--- a/backend/apigateway-service/Dockerfile
+++ b/backend/apigateway-service/Dockerfile
@@ -2,7 +2,7 @@
 FROM gradle:7.6-jdk17 AS builder
 WORKDIR /app
 COPY . .
-RUN ./gradlew clean build --no-daemon
+RUN ./gradlew clean build -x test --no-daemon
 
 # 실행 단계
 FROM openjdk:17-alpine
@@ -12,10 +12,10 @@ RUN apk add --no-cache tzdata && \
     echo "Asia/Seoul" > /etc/timezone
 
 # 빌드된 JAR 파일 복사
-COPY --from=builder /app/build/libs/*.jar /app/gateway-service.jar
+COPY --from=builder /app/build/libs/apigateway-service.jar /app/apigateway-service.jar
 
 # 컨테이너에서 사용하는 포트 명시
 EXPOSE 8080
 
 # 애플리케이션 실행
-ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "-Duser.timezone=Asia/Seoul", "/app/gateway-service.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "-Duser.timezone=Asia/Seoul", "/app/apigateway-service.jar"]
