--- a/backend/config-service/Dockerfile
+++ b/backend/config-service/Dockerfile
@@ -2,7 +2,7 @@
 FROM gradle:7.6-jdk17 AS builder
 WORKDIR /app
 COPY . .
-RUN ./gradlew clean build --no-daemon
+RUN ./gradlew clean build -x test --no-daemon  # 테스트 제외
 
 # 실행 단계
 FROM openjdk:17-alpine
@@ -12,7 +12,7 @@ RUN apk add --no-cache tzdata && \
     echo "Asia/Seoul" > /etc/timezone
 
 # 빌드된 JAR 파일 복사
-COPY --from=builder /app/build/libs/*.jar /app/config-service.jar
+COPY --from=builder /app/build/libs/config-service.jar /app/config-service.jar
 
 # 컨테이너에서 사용하는 포트 명시
 EXPOSE 8888
