--- a/backend/apigateway-service/Dockerfile
+++ b/backend/apigateway-service/Dockerfile
@@ -1,9 +1,8 @@
-# 빌드 단계
 FROM gradle:7.6-jdk17 AS builder
 WORKDIR /app
 COPY . .
-ARG JAR_FILE_PATH
-RUN ./gradlew clean build -x test --no-daemon
+RUN chmod +x gradlew && \
+    ./gradlew clean build -x test --no-daemon
 
 # 실행 단계
 FROM openjdk:17-alpine
@@ -12,9 +11,8 @@ RUN apk add --no-cache tzdata && \
     cp /usr/share/zoneinfo/Asia/Seoul /etc/localtime && \
     echo "Asia/Seoul" > /etc/timezone
 
-# 빌드된 JAR 파일 복사 (동적 설정)
-ARG JAR_FILE_PATH
-COPY --from=builder /app/${JAR_FILE_PATH} /app/service.jar
+# 빌드된 JAR 파일 복사
+COPY --from=builder /app/build/libs/*.jar /app/service.jar
 
 # 컨테이너에서 사용하는 포트 명시
 EXPOSE 8761
