--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-color-picker": "^0.6.0",
+    "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-keychain": "^9.0.0",
     "react-native-latex": "^0.5.0",
