--- a/backend/apigateway-service/Jenkinsfile
+++ b/backend/apigateway-service/Jenkinsfile
@@ -19,12 +19,12 @@ pipeline {
         }
 
         stage('Build Docker Image') {
-            steps {
-                script {
-                    docker.build("${env.IMAGE_NAME}:latest")
+                    steps {
+                        script {
+                            docker.build("${env.IMAGE_NAME}:latest", "-f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
+                        }
+                    }
                 }
-            }
-        }
 
         stage('Push to DockerHub') {
             steps {
