--- a/backend/discovery-service/Jenkinsfile
+++ b/backend/discovery-service/Jenkinsfile
@@ -18,13 +18,13 @@ pipeline {
             }
         }
 
-        stage('Build Docker Image') {
-            steps {
-                script {
-                    docker.build("${env.IMAGE_NAME}:latest")
-                }
-            }
-        }
+       stage('Build Docker Image') {
+                   steps {
+                       script {
+                           docker.build("${env.IMAGE_NAME}:latest", "-f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
+                       }
+                   }
+               }
 
         stage('Push to DockerHub') {
             steps {
