--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-gifted-charts": "^1.4.47",
