--- a/backend/apigateway-service/Jenkinsfile
+++ b/backend/apigateway-service/Jenkinsfile
@@ -18,13 +18,37 @@ pipeline {
             }
         }
 
-        stage('Build Docker Image') {
-                    steps {
-                        script {
-                            docker.build("${env.IMAGE_NAME}:latest", "-f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
+        stage('Wait for Config and Discovery Services') {
+            steps {
+                script {
+                    def isConfigRunning = false
+                    def isDiscoveryRunning = false
+
+                    for (int i = 0; i < 5; i++) {
+                        isConfigRunning = sh(script: "curl -s http://${DEPLOY_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
+                        isDiscoveryRunning = sh(script: "curl -s http://${DEPLOY_SERVER}:8761/actuator/health | grep 'UP'", returnStatus: true) == 0
+                        if (isConfigRunning && isDiscoveryRunning) {
+                            break
                         }
+                        sleep 10
+                    }
+                    if (!isConfigRunning) {
+                        error "Config Service is not ready."
+                    }
+                    if (!isDiscoveryRunning) {
+                        error "Discovery Service is not ready."
                     }
                 }
+            }
+        }
+
+        stage('Build Docker Image') {
+            steps {
+                script {
+                    docker.build("${env.IMAGE_NAME}:latest", "-f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
+                }
+            }
+        }
 
         stage('Push to DockerHub') {
             steps {
@@ -48,6 +72,21 @@ pipeline {
                     """
                 }
             }
+        }
+    }
+
+    post {
+        success {
+            mattermostSend(
+                color: 'good',
+                message: "API Gateway 배포 성공."
+            )
+        }
+        failure {
+            mattermostSend(
+                color: 'danger',
+                message: "API Gateway 배포 실패. 수동 확인이 필요합니다."
+            )
         }
     }
 }
