--- a/backend/config-service/Jenkinsfile
+++ b/backend/config-service/Jenkinsfile
@@ -18,14 +18,13 @@ pipeline {
             }
         }
 
-       stage('Build Docker Image') {
-                   steps {
-                       script {
-                           docker.build("${env.IMAGE_NAME}:latest", "-f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
-                       }
-                   }
-               }
-
+        stage('Build Docker Image') {
+            steps {
+                script {
+                    docker.build("${env.IMAGE_NAME}:latest", "-f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
+                }
+            }
+        }
 
         stage('Push to DockerHub') {
             steps {
@@ -49,6 +48,36 @@ pipeline {
                     """
                 }
             }
+        }
+
+        stage('Wait for Service to be Ready') {
+            steps {
+                script {
+                    sleep 10
+                    def isRunning = sh(script: "curl -s http://${DEPLOY_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
+                    if (!isRunning) {
+                        error "Config Service is not ready."
+                    }
+                }
+            }
+        }
+    }
+
+    post {
+        success {
+            script {
+                mattermostSend(
+                    color: 'good',
+                    message: "Config Service 배포 성공. 다음 Discovery Service 배포를 시작합니다."
+                )
+                build job: 'discovery-service'
+            }
+        }
+        failure {
+            mattermostSend(
+                color: 'danger',
+                message: "Config Service 배포 실패. 수동 확인이 필요합니다."
+            )
         }
     }
 }
