--- a/backend/discovery-service/Jenkinsfile
+++ b/backend/discovery-service/Jenkinsfile
@@ -18,13 +18,31 @@ pipeline {
             }
         }
 
-       stage('Build Docker Image') {
-                   steps {
-                       script {
-                           docker.build("${env.IMAGE_NAME}:latest", "-f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
-                       }
-                   }
-               }
+        stage('Wait for Config Service') {
+            steps {
+                script {
+                    def isConfigRunning = false
+                    for (int i = 0; i < 5; i++) {
+                        isConfigRunning = sh(script: "curl -s http://${DEPLOY_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
+                        if (isConfigRunning) {
+                            break
+                        }
+                        sleep 10
+                    }
+                    if (!isConfigRunning) {
+                        error "Config Service is not ready."
+                    }
+                }
+            }
+        }
+
+        stage('Build Docker Image') {
+            steps {
+                script {
+                    docker.build("${env.IMAGE_NAME}:latest", "-f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
+                }
+            }
+        }
 
         stage('Push to DockerHub') {
             steps {
@@ -48,6 +66,24 @@ pipeline {
                     """
                 }
             }
+        }
+    }
+
+    post {
+        success {
+            script {
+                mattermostSend(
+                    color: 'good',
+                    message: "Discovery Service 배포 성공. 다음 API Gateway 배포를 시작합니다."
+                )
+                build job: 'apigateway-service'
+            }
+        }
+        failure {
+            mattermostSend(
+                color: 'danger',
+                message: "Discovery Service 배포 실패. 수동 확인이 필요합니다."
+            )
         }
     }
 }
