--- a/backend/user-service/src/main/resources/bootstrap.yml
+++ b/backend/user-service/src/main/resources/bootstrap.yml
@@ -1,11 +1,14 @@
-server :
-  port : 0
-
 spring:
   cloud:
     config:
-      uri: http://127.0.0.1:8080
+      uri: http://127.0.0.1:8080  # Config 서버 URI
       name: eum
-
   profiles:
     active: user
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/  # Eureka 서버 URI
+    registerWithEureka: true
+    fetchRegistry: true
