fix(#S11P31D101-324) : actuator 설정

--- a/backend/apigateway-service/src/main/resources/application.yml
+++ b/backend/apigateway-service/src/main/resources/application.yml
@@ -17,3 +17,8 @@ spring:
       mvc:
         routes:
           # TODO : Micro Service ??
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
