feat(#S11P31D101-299): config-service .yml파일 추가

--- a/backend/config-service/Jenkinsfile
+++ b/backend/config-service/Jenkinsfile
@@ -19,6 +19,14 @@ pipeline {
             }
         }
 
+        stage('Copy Secret File') {
+                    steps {
+                        withCredentials([file(credentialsId: 'application-yml', variable: 'APPLICATION_YML')]) {
+                            sh "cp ${APPLICATION_YML} backend/${SERVICE_NAME}/src/main/resources/application.yml"
+                        }
+                    }
+                }
+
         stage('Build Docker Image') {
             steps {
                 script {
