--- a/backend/apigateway-service/Jenkinsfile
+++ b/backend/apigateway-service/Jenkinsfile
@@ -26,8 +26,8 @@ pipeline {
                     def isDiscoveryRunning = false
 
                     for (int i = 0; i < 5; i++) {
-                        isConfigRunning = sh(script: "curl -s http://${CHECK_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
-                        isDiscoveryRunning = sh(script: "curl -s http://${CHECK_SERVER}:8761/actuator/health | grep 'UP'", returnStatus: true) == 0
+                        isConfigRunning = sh(script: "curl -s https://${CHECK_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
+                        isDiscoveryRunning = sh(script: "curl -s https://${CHECK_SERVER}:8761/actuator/health | grep 'UP'", returnStatus: true) == 0
                         if (isConfigRunning && isDiscoveryRunning) {
                             break
                         }
