--- a/backend/apigateway-service/src/main/resources/application.yml
+++ b/backend/apigateway-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ eureka:
     fetch-registry: true
     service-url:
       # TODO : ?? Service URL? ????
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://discovery-service:8761/eureka
 
 spring:
   application:
