fix(#S11P31D101-299): 강제 빌드되도록 변경

--- a/backend/apigateway-service/Jenkinsfile
+++ b/backend/apigateway-service/Jenkinsfile
@@ -62,7 +62,7 @@ pipeline {
                         ssh -o StrictHostKeyChecking=no ${env.DEPLOY_SERVER} '
                             cd ${env.PROJECT_ROOT} &&
                             docker-compose pull ${SERVICE_NAME} &&
-                            docker-compose up -d ${SERVICE_NAME}
+                            docker-compose up -d --force-recreate --no-deps ${SERVICE_NAME}
                         '
                     """
                 }
