fix(#S11P31D101-299): 이미지 캐싱하지 않기

--- a/backend/discovery-service/Jenkinsfile
+++ b/backend/discovery-service/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    docker.build("${env.IMAGE_NAME}:latest", "-f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
+                    docker.build("${env.IMAGE_NAME}:latest", "--no-cache -f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
                 }
             }
         }
