--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "express": "^4.21.1",
+    "lodash": "^4.17.21",
+    "pako": "^2.1.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-chart-kit": "^6.12.0",
@@ -48,6 +50,8 @@
     "@react-native/eslint-config": "0.75.4",
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
+    "@types/lodash": "^4.17.13",
+    "@types/pako": "^2.0.3",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
