--- a/backend/config-service/Jenkinsfile
+++ b/backend/config-service/Jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                     docker.build("${env.IMAGE_NAME}:latest", "--no-cache -f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
+                    docker.build("${env.IMAGE_NAME}:latest", "--no-cache -f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
                 }
             }
         }
@@ -54,7 +54,9 @@ pipeline {
                    sh """
                        ssh -o StrictHostKeyChecking=no ${env.DEPLOY_SERVER} '
                            cd ${env.PROJECT_ROOT} &&
-                           docker-compose pull --ignore-pull-failures ${SERVICE_NAME} &&
+                           docker-compose stop ${SERVICE_NAME} &&
+                           docker-compose rm -f ${SERVICE_NAME} &&
+                           docker-compose pull ${SERVICE_NAME} &&
                            docker-compose up -d --force-recreate --no-deps ${SERVICE_NAME} &&
                            docker image prune -f --filter "dangling=true"
                        '
