--- a/backend/config-service/Jenkinsfile
+++ b/backend/config-service/Jenkinsfile
@@ -65,24 +65,24 @@ pipeline {
            }
        }
 
-        stage('Wait for Service to be Ready') {
-            steps {
-                script {
-                    sleep 10
-                    def isRunning = sh(script: "curl -s http://${CHECK_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
-                    if (!isRunning) {
-                        error "Config Service is not ready."
-                    }
-                }
-            }
-        }
+//         stage('Wait for Service to be Ready') {
+//             steps {
+//                 script {
+//                     sleep 10
+//                     def isRunning = sh(script: "curl -s http://${CHECK_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
+//                     if (!isRunning) {
+//                         error "Config Service is not ready."
+//                     }
+//                 }
+//             }
+//         }
     }
 
     post {
         success {
             script {
                 mattermostSend(color: 'good', message: "Config Service 배포 성공. 다음 Discovery Service 배포를 시작합니다.")
-                build job: 'discovery-service', wait: false
+                //build job: 'discovery-service', wait: false
             }
         }
         failure {
