--- a/backend/discovery-service/Jenkinsfile
+++ b/backend/discovery-service/Jenkinsfile
@@ -19,19 +19,19 @@ pipeline {
             }
         }
 
-        stage('Wait for Config Service') {
-            steps {
-                script {
-                    def isConfigRunning = false
-                    for (int i = 0; i < 5; i++) {
-                        isConfigRunning = sh(script: "curl -s http://${CHECK_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
-                        if (isConfigRunning) break
-                        sleep 10
-                    }
-                    if (!isConfigRunning) error "Config Service is not ready."
-                }
-            }
-        }
+//         stage('Wait for Config Service') {
+//             steps {
+//                 script {
+//                     def isConfigRunning = false
+//                     for (int i = 0; i < 5; i++) {
+//                         isConfigRunning = sh(script: "curl -s http://${CHECK_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
+//                         if (isConfigRunning) break
+//                         sleep 10
+//                     }
+//                     if (!isConfigRunning) error "Config Service is not ready."
+//                 }
+//             }
+//         }
 
         stage('Build Docker Image') {
             steps {
