--- a/backend/discovery-service/Jenkinsfile
+++ b/backend/discovery-service/Jenkinsfile
@@ -1,6 +1,5 @@
 pipeline {
     agent any
-
     environment {
         DOCKERHUB_CREDENTIALS = 'dockerhub-credentials'
         DEPLOY_SERVER_CREDENTIALS = 'ec2-ssh-key'
@@ -15,28 +14,22 @@ pipeline {
         stage('Checkout') {
             steps {
                 deleteDir()
-                checkout scm
+                checkout([
+                    $class: 'GitSCM',
+                    branches: [[name: '*/main']],
+                    extensions: [
+                        [$class: 'SparseCheckoutPaths', sparseCheckoutPaths: [[path: 'backend/discovery-service']]],
+                        [$class: 'RelativeTargetDirectory', relativeTargetDir: 'backend/discovery-service']
+                    ],
+                    userRemoteConfigs: [[url: 'https://lab.ssafy.com/s11-final/S11P31D101.git']]
+                ])
             }
         }
-
-//         stage('Wait for Config Service') {
-//             steps {
-//                 script {
-//                     def isConfigRunning = false
-//                     for (int i = 0; i < 5; i++) {
-//                         isConfigRunning = sh(script: "curl -s http://${CHECK_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
-//                         if (isConfigRunning) break
-//                         sleep 10
-//                     }
-//                     if (!isConfigRunning) error "Config Service is not ready."
-//                 }
-//             }
-//         }
 
         stage('Build Docker Image') {
             steps {
                 script {
-                    docker.build("${env.IMAGE_NAME}:latest", "--no-cache -f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
+                    docker.build("${env.IMAGE_NAME}:latest", "--no-cache -f backend/discovery-service/Dockerfile backend/discovery-service")
                 }
             }
         }
@@ -57,10 +50,8 @@ pipeline {
                     sh """
                         ssh -o StrictHostKeyChecking=no ${env.DEPLOY_SERVER} '
                             cd ${env.PROJECT_ROOT} &&
-                            docker-compose stop ${SERVICE_NAME} &&
-                            docker-compose rm -f ${SERVICE_NAME} &&
                             docker-compose pull ${SERVICE_NAME} &&
-                            docker-compose up -d --force-recreate --no-deps ${SERVICE_NAME} &&
+                            docker-compose up -d --force-recreate ${SERVICE_NAME} &&
                             docker image prune -f --filter "dangling=true"
                         '
                     """
@@ -71,10 +62,10 @@ pipeline {
 
     post {
         success {
-            mattermostSend(color: 'good', message: "Discovery Service 배포 성공.")
+            mattermostSend(color: 'good', message: "${SERVICE_NAME} 배포 성공.")
         }
         failure {
-            mattermostSend(color: 'danger', message: "Discovery Service 배포 실패. 수동 확인이 필요합니다.")
+            mattermostSend(color: 'danger', message: "${SERVICE_NAME} 배포 실패. 수동 확인이 필요합니다.")
         }
     }
 }
