refactor(#S11P31D101-299): Checkout 로직 수정

--- a/backend/config-service/Jenkinsfile
+++ b/backend/config-service/Jenkinsfile
@@ -1,38 +1,39 @@
 pipeline {
     agent any
+
     environment {
         DOCKERHUB_CREDENTIALS = 'dockerhub-credentials'
         DEPLOY_SERVER_CREDENTIALS = 'ec2-ssh-key'
         DEPLOY_SERVER = 'ubuntu@k11d101.p.ssafy.io'
         CHECK_SERVER = 'k11d101.p.ssafy.io'
         PROJECT_ROOT = '/home/ubuntu'
-        SERVICE_NAME = 'config-service' // 서비스 이름을 변경해 각 서비스에 맞게 설정
+        SERVICE_NAME = 'config-service'
         IMAGE_NAME = "yechanissm2/${SERVICE_NAME}"
     }
 
     stages {
         stage('Checkout') {
-                    steps {
-                        deleteDir()
-                        checkout([
-                            $class: 'GitSCM',
-                            branches: [[name: '*/backend/develop']],
-                            extensions: [
-                                [$class: 'SparseCheckoutPaths', sparseCheckoutPaths: [[path: "backend/${SERVICE_NAME}"]]],
-                                [$class: 'RelativeTargetDirectory', relativeTargetDir: "backend/${SERVICE_NAME}"]
-                            ],
-                            userRemoteConfigs: [[
-                                url: 'https://lab.ssafy.com/s11-final/S11P31D101.git',
-                                credentialsId: 'gitlab_credentials'
-                            ]]
-                        ])
-                    }
-                }
+            steps {
+                deleteDir()
+                checkout([
+                    $class: 'GitSCM',
+                    branches: [[name: '*/backend/develop']],
+                    extensions: [
+                        [$class: 'SparseCheckoutPaths', sparseCheckoutPaths: [[path: "backend/${SERVICE_NAME}"]]],
+                        [$class: 'RelativeTargetDirectory', relativeTargetDir: "backend/${SERVICE_NAME}"]
+                    ],
+                    userRemoteConfigs: [[
+                        url: 'https://lab.ssafy.com/s11-final/S11P31D101.git',
+                        credentialsId: 'gitlab_credentials'
+                    ]]
+                ])
+            }
+        }
 
         stage('Build Docker Image') {
             steps {
                 script {
-                    docker.build("${env.IMAGE_NAME}:latest", "--no-cache -f backend/config-service/Dockerfile backend/config-service")
+                    docker.build("${env.IMAGE_NAME}:latest", "--no-cache -f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
                 }
             }
         }
@@ -53,8 +54,10 @@ pipeline {
                     sh """
                         ssh -o StrictHostKeyChecking=no ${env.DEPLOY_SERVER} '
                             cd ${env.PROJECT_ROOT} &&
+                            docker-compose stop ${SERVICE_NAME} &&
+                            docker-compose rm -f ${SERVICE_NAME} &&
                             docker-compose pull ${SERVICE_NAME} &&
-                            docker-compose up -d --force-recreate ${SERVICE_NAME} &&
+                            docker-compose up -d --force-recreate --no-deps ${SERVICE_NAME} &&
                             docker image prune -f --filter "dangling=true"
                         '
                     """
