--- a/backend/discovery-service/Jenkinsfile
+++ b/backend/discovery-service/Jenkinsfile
@@ -13,22 +13,22 @@ pipeline {
 
     stages {
         stage('Checkout') {
-                    steps {
-                        deleteDir()
-                        checkout([
-                            $class: 'GitSCM',
-                            branches: [[name: '*/backend/develop']],
-                            extensions: [
-                                [$class: 'SparseCheckoutPaths', sparseCheckoutPaths: [[path: "backend/${SERVICE_NAME}"]]],
-                                [$class: 'RelativeTargetDirectory', relativeTargetDir: "backend/${SERVICE_NAME}"]
-                            ],
-                            userRemoteConfigs: [[
-                                url: 'https://lab.ssafy.com/s11-final/S11P31D101.git',
-                                credentialsId: 'gitlab_credentials'
-                            ]]
-                        ])
-                    }
-                }
+            steps {
+                deleteDir()
+                checkout([
+                    $class: 'GitSCM',
+                    branches: [[name: '*/backend/develop']],
+                    extensions: [
+                        [$class: 'SparseCheckoutPaths', sparseCheckoutPaths: [[path: "backend/${SERVICE_NAME}"]]],
+                        [$class: 'RelativeTargetDirectory', relativeTargetDir: "backend/${SERVICE_NAME}"]
+                    ],
+                    userRemoteConfigs: [[
+                        url: 'https://lab.ssafy.com/s11-final/S11P31D101.git',
+                        credentialsId: 'gitlab_credentials'
+                    ]]
+                ])
+            }
+        }
 
         stage('Build Docker Image') {
             steps {
@@ -68,10 +68,10 @@ pipeline {
 
     post {
         success {
-            mattermostSend(color: 'good', message: "Discovery Service 배포 성공.")
+            mattermostSend(color: 'good', message: "${SERVICE_NAME} 배포 성공.")
         }
         failure {
-            mattermostSend(color: 'danger', message: "Discovery Service 배포 실패. 수동 확인이 필요합니다.")
+            mattermostSend(color: 'danger', message: "${SERVICE_NAME} 배포 실패. 수동 확인이 필요합니다.")
         }
     }
 }
