--- a/backend/config-service/Jenkinsfile
+++ b/backend/config-service/Jenkinsfile
@@ -15,18 +15,18 @@ pipeline {
         stage('Checkout') {
             steps {
                 deleteDir()
-                checkout([
-                    $class: 'GitSCM',
-                    branches: [[name: '*/backend/develop']],
-                    extensions: [
-                        [$class: 'SparseCheckoutPaths', sparseCheckoutPaths: [[path: "backend/${SERVICE_NAME}"]]],
-                        [$class: 'RelativeTargetDirectory', relativeTargetDir: "backend/${SERVICE_NAME}"]
-                    ],
-                    userRemoteConfigs: [[
-                        url: 'https://lab.ssafy.com/s11-final/S11P31D101.git',
-                        credentialsId: 'gitlab_credentials'
-                    ]]
-                ])
+                checkout scm
+            }
+        }
+
+        stage('Copy Secret File') {
+            steps {
+                withCredentials([file(credentialsId: 'application-yml', variable: 'APPLICATION_YML')]) {
+                    sh """
+                        mkdir -p backend/${SERVICE_NAME}/src/main/resources
+                        cp ${APPLICATION_YML} backend/${SERVICE_NAME}/src/main/resources/application.yml
+                    """
+                }
             }
         }
 
@@ -48,30 +48,45 @@ pipeline {
             }
         }
 
-        stage('Deploy to Server') {
-            steps {
-                sshagent([env.DEPLOY_SERVER_CREDENTIALS]) {
-                    sh """
-                        ssh -o StrictHostKeyChecking=no ${env.DEPLOY_SERVER} '
-                            cd ${env.PROJECT_ROOT} &&
-                            docker-compose stop ${SERVICE_NAME} &&
-                            docker-compose rm -f ${SERVICE_NAME} &&
-                            docker-compose pull ${SERVICE_NAME} &&
-                            docker-compose up -d --force-recreate --no-deps ${SERVICE_NAME} &&
-                            docker image prune -f --filter "dangling=true"
-                        '
-                    """
-                }
-            }
-        }
+       stage('Deploy to Server') {
+           steps {
+               sshagent([env.DEPLOY_SERVER_CREDENTIALS]) {
+                   sh """
+                       ssh -o StrictHostKeyChecking=no ${env.DEPLOY_SERVER} '
+                           cd ${env.PROJECT_ROOT} &&
+                           docker-compose stop ${SERVICE_NAME} &&
+                           docker-compose rm -f ${SERVICE_NAME} &&
+                           docker-compose pull ${SERVICE_NAME} &&
+                           docker-compose up -d --force-recreate --no-deps ${SERVICE_NAME} &&
+                           docker image prune -f --filter "dangling=true"
+                       '
+                   """
+               }
+           }
+       }
+
+//         stage('Wait for Service to be Ready') {
+//             steps {
+//                 script {
+//                     sleep 10
+//                     def isRunning = sh(script: "curl -s http://${CHECK_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
+//                     if (!isRunning) {
+//                         error "Config Service is not ready."
+//                     }
+//                 }
+//             }
+//         }
     }
 
     post {
         success {
-            mattermostSend(color: 'good', message: "${SERVICE_NAME} 배포 성공.")
+            script {
+                mattermostSend(color: 'good', message: "Config Service 배포 성공. 다음 Discovery Service 배포를 시작합니다.")
+                //build job: 'discovery-service', wait: false
+            }
         }
         failure {
-            mattermostSend(color: 'danger', message: "${SERVICE_NAME} 배포 실패. 수동 확인이 필요합니다.")
+            mattermostSend(color: 'danger', message: "Config Service 배포 실패. 수동 확인이 필요합니다.")
         }
     }
 }
