feat(#S11P31D101-276) : user-service config name 수정

--- a/backend/user-service/src/main/resources/bootstrap.yml
+++ b/backend/user-service/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     config:
       uri: http://config-service:8888  # Config 서버 URI
-      name: eum
+      name: eum-user
   profiles:
     active: user
 
